# ModelX

./: .env.example  .gitignore  AGI_IMPLEMENTATION_ROADMAP.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PHASE_18_PROJECT_PLAN.md  README.md  alembic.ini  analyzer.py  commit_all.py  commit_all.sh  commit_each.sh  docker-compose.yml  install.sh  project_analysis.md  pyproject.toml  requirements-voice.txt  run.sh
.github/: release-drafter.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  004_phase7_cognition.py  005_phase7_6_benchmarks.py  013_phase8_swarm.py  014_phase17_runtime.py
benchmark_results/v3.1/: benchmark_report.md  benchmark_results.json
docker/postgres-config/: pg_hba.conf
docker/postgres-init/: 01-init.sh
docker/sandbox/: Dockerfile  requirements.txt
docs/: 01_overview_and_architecture.md  02_database_and_agents.md  03_memory_and_rag.md  04_meta_learning_and_autonomous.md  05_api_and_workflows.md  05_phase_v2_validation.md  06_deployment_and_operations.md  06_phase_v3_real_verification.md  07_development_and_testing.md  08_roadmap_and_appendices.md  CLI_GUIDE.md
docs/analysis/: 04_ai_capabilities.md  05_memory_system.md  06_rag.md  08_tool_system.md  11_security_audit.md  14_technical_debt.md  15_agi_readiness.md
modelx_voice/: main.py  pipeline.py
modelx_voice/audio/: __init__.py  vad.py
modelx_voice/brain/: __init__.py  context.py
modelx_voice/config/: manager.py  setup_wizard.py
modelx_voice/tts/: __init__.py  piper_wrapper.py
modelx_voice/ui/: __init__.py
modelx_voice/voices/: voice_config.json
src/: __init__.py
src/agent_society/: __init__.py  knowledge_marketplace.py  society_runtime.py
src/agents/: __init__.py  capability_nodes.py  execution_agent.py  memory_agent.py  orchestrator.py  project_nodes.py  reflection_agent.py  research_agent.py  state.py  world_model_nodes.py
src/api/: auth.py  dependencies.py  main.py
src/architecture/: architecture_generator.py
src/autonomous_development/: __init__.py  architecture_evolver.py  code_improvement.py  repo_optimizer.py  self_development.py
src/autonomy/: __init__.py  autonomy_recovery.py  checkpoint_manager.py  objective_manager.py  progress_tracker.py  recovery.py  runtime_metrics.py  runtime_scheduler.py
src/cli/: __init__.py  api_client.py  config.py  formatters.py  main.py
src/coding/: benchmark_tasks.py  code_editor.py  long_horizon_validation.py  patch_generator.py  planner.py  test_runner.py
src/cognition/: __init__.py  cognitive_bus.py  cognitive_metrics.py  decision_tracker.py  delegation_protocol.py  failure_analyzer.py  hierarchical_agent_registry.py  intelligence_reporter.py  learning_velocity.py  meta_learning_engine.py  performance_tracker.py  reflection_agent.py  self_improvement.py  skill_discovery.py  strategy_synthesizer.py  swarm.py
src/cognitive_communication/: __init__.py  agent_protocol.py  cognitive_events.py  message_broker.py
src/cognitive_kernel/: __init__.py  attention_manager.py  cognitive_bus.py  context_manager.py  kernel.py  scheduler.py
src/concepts/: __init__.py  concept_graph.py  concept_registry.py  concept_relationships.py
src/config/: __init__.py  logging.py  settings.py
src/core/: service_registry.py
src/db/: __init__.py  enums.py  models.py  session.py
src/decision/: __init__.py  decision_engine.py  decision_evaluator.py  decision_marketplace.py  decision_memory.py  executive_agent.py  executive_council.py  failure_predictor.py  future_simulator.py  goal_optimizer.py  objective_engine.py  option_generator.py  outcome_memory.py  outcome_predictor.py  pareto_optimizer.py  reward_models.py  risk_engine.py  scenario_generator.py  strategic_planner.py  strategy_engine.py  strategy_memory.py  tradeoff_engine.py  uncertainty_model.py  utility_functions.py
src/evaluation/: generalization_suite.py  novel_domain_benchmark.py  transfer_validation.py
src/governance/: assumption_detector.py  belief_extractor.py  causal_attribution.py  constraint_system.py  decision_archive.py  decision_evolution.py  decision_pattern_miner.py  failure_pattern_detector.py  governance_memory.py  outcome_validator.py  policy_manager.py  premise_analyzer.py  review_board.py  strategic_review.py  success_pattern_detector.py
src/identity/: __init__.py  identity_engine.py  mission_manager.py  self_model.py
src/knowledge/: concept_evolution.py  concept_extractor.py  concept_merger.py  concept_splitter.py
src/knowledge_compression/: __init__.py  abstraction_engine.py  compression_engine.py  knowledge_distiller.py
src/knowledge_fitness/: __init__.py  knowledge_benchmark.py  knowledge_fitness.py
src/knowledge_graph/: manager.py
src/knowledge_lineage/: __init__.py  knowledge_lineage.py
src/learning/: abstraction_engine.py  consolidation_engine.py  continuous_learning.py  experience_encoder.py  forgetting_engine.py  learning_scheduler.py
src/memory/: __init__.py  context_compressor.py  episodic_memory.py  long_term.py  memory_consolidation.py  memory_fabric.py  memory_manager.py  procedural_memory.py  semantic_memory.py  working_memory.py
src/mental_models/: __init__.py  mental_models.py  model_registry.py  model_selection.py
src/monitoring/: prometheus.py
src/multimodal/: __init__.py  screenshot_pipeline.py  vision_processor.py  visual_interaction.py
src/rag/: __init__.py  chunking.py  embeddings.py  ingestion.py  retriever.py  vector_store.py
src/reasoning/: __init__.py  counterfactual_engine.py  counterfactual_reasoner.py  deliberation_engine.py  drift_detector.py  hypothesis_tree.py  planner.py  reactive_replanner.py  reasoning_engine.py  reasoning_hub.py  search_engine.py
src/research_programs/: __init__.py  program_memory.py  program_scheduler.py  research_program.py
src/tools/: base.py  (+17 more)
test_validation_results/: validation_report.md  validation_summary.json
tests/: conftest.py  test_generated.py  test_phase_14_17_integration.py
validation_results/: validation_summary.json
(+197 files in other folders)
