[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelx-voice"
version = "1.0.0"
description = "Terminal voice assistant for ModelX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
    "keyring>=24.0.0",
    "aiohttp>=3.9.0",
    "piper-tts>=1.2.0",
    "faster-whisper>=1.0.0",
    "webrtcvad>=2.0.10",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
modelx-voice = "modelx_voice.main:main"

[project.optional-dependencies]
audio = ["pyaudio>=0.2.13"]
dev = ["pytest>=7.0.0", "black>=23.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["modelx_voice"]
include = ["modelx_voice/voices/*.onnx", "modelx_voice/voices/*.json"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]