[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelx-voice"
version = "1.0.0"
description = "Terminal voice assistant for ModelX"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "ModelX Team", email = "voice@modelx.ai"}
]
maintainers = [
    {name = "ModelX Team", email = "voice@modelx.ai"}
]
keywords = [
    "voice-assistant",
    "tts",
    "stt",
    "llm",
    "terminal",
    "piper",
    "whisper",
    "ollama",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
    "keyring>=24.0.0",
    "aiohttp>=3.9.0",
    "piper-tts>=1.2.0",
    "faster-whisper>=1.0.0",
    "webrtcvad>=2.0.10",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
modelx-voice = "modelx_voice.main:main"
modelx = "modelx_voice.main:main"
ModelX = "modelx_voice.main:main"
Modelx = "modelx_voice.main:main"
modelX = "modelx_voice.main:main"
MODELX = "modelx_voice.main:main"

[project.optional-dependencies]
audio = ["pyaudio>=0.2.13"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bump2version>=1.0.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/modelx/modelx-voice"
Repository = "https://github.com/modelx/modelx-voice"
Issues = "https://github.com/modelx/modelx-voice/issues"
Documentation = "https://github.com/modelx/modelx-voice#readme"
Changelog = "https://github.com/modelx/modelx-voice/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["modelx_voice"]
include = ["modelx_voice/voices/*.onnx", "modelx_voice/voices/*.json"]

[tool.black]
line-length = 100
target-version = ['py310']
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["modelx_voice"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
per-file-ignores = {
    "tests/*": ["S101"],  # allow assert in tests
}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[tool.mypy.modelx_voice.*]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-k", "not audio",  # Skip audio tests by default
]
markers = [
    "audio: marks tests as requiring audio hardware",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["modelx_voice"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2

[tool.pre-commit]
exclude = "^docs/"

[tool.bumpversion]
current_version = "1.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = "{major}.{minor}.{patch}"
commit = true
tag = true
message = "chore: release v{new_version}"

[tool.bumpversion.file_patterns]
- "pyproject.toml"
- "modelx_voice/__init__.py"